{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 125,
  "lineage": "15ffb1d9-dd93-f2f6-2e96-7c91e8c044d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b032287f82e345f",
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:elastic-ip/eipalloc-05b032287f82e345f",
            "association_id": "eipassoc-0a6cf5b4a8080d0a5",
            "domain": "vpc",
            "id": "eipalloc-05b032287f82e345f",
            "instance": "i-091268a918321d782",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-05917648f116d03c2",
            "private_dns": "ip-10-0-1-92.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-18-141-106-44.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.106.44",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06650ca7ed78ff6fa",
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:instance/i-028368f1116210e7e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028368f1116210e7e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "susu.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06fb645591696f808",
            "private_dns": "ip-192-168-1-85.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b7b256979b004795",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0556882cbab6feda5",
            "tags": {
              "Name": "peering_vpc_2-Server-2"
            },
            "tags_all": {
              "Name": "peering_vpc_2-Server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0abb942e8ac5400b8"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.server-sg2",
            "aws_subnet.private-subnet1",
            "aws_vpc.peering_vpc2",
            "tls_private_key.ssh_keypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06650ca7ed78ff6fa",
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:instance/i-091268a918321d782",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091268a918321d782",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "susu.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05917648f116d03c2",
            "private_dns": "ip-10-0-1-92.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.92",
            "public_ip": "18.141.106.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-046dc148d7f661698",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0963cd20afbf1413a",
            "tags": {
              "Name": "peering_vpc_1-Server-1"
            },
            "tags_all": {
              "Name": "peering_vpc_1-Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb2b582bddbe34cc"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.server-sg1",
            "aws_subnet.public-subnet1",
            "aws_vpc.peering_vpc1",
            "tls_private_key.ssh_keypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:internet-gateway/igw-0cd5d564d0c3588b6",
            "id": "igw-0cd5d564d0c3588b6",
            "owner_id": "992382362896",
            "tags": {
              "Name": "internet-GW"
            },
            "tags_all": {
              "Name": "internet-GW"
            },
            "vpc_id": "vpc-0d90229bbaf5dfe74"
          },
          "dependencies": [
            "aws_vpc.peering_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:route-table/rtb-0cdd3666031c2e9d4",
            "id": "rtb-0cdd3666031c2e9d4",
            "owner_id": "992382362896",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-045ec02d99745a5a3"
              }
            ],
            "tags": {
              "Name": "My_private_RT"
            },
            "tags_all": {
              "Name": "My_private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4a88759f36c8914"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.peering_vpc1",
            "aws_vpc.peering_vpc2",
            "aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:route-table/rtb-02224ec74cd5a3025",
            "id": "rtb-02224ec74cd5a3025",
            "owner_id": "992382362896",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd5d564d0c3588b6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-045ec02d99745a5a3"
              }
            ],
            "tags": {
              "Name": "My_public_RT"
            },
            "tags_all": {
              "Name": "My_public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d90229bbaf5dfe74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.peering_vpc1",
            "aws_vpc.peering_vpc2",
            "aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTAsso1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e418fb53d231611",
            "route_table_id": "rtb-02224ec74cd5a3025",
            "subnet_id": "subnet-0963cd20afbf1413a"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet1",
            "aws_vpc.peering_vpc1",
            "aws_vpc.peering_vpc2",
            "aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTAsso2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0396f8aeca84055e3",
            "route_table_id": "rtb-0cdd3666031c2e9d4",
            "subnet_id": "subnet-0556882cbab6feda5"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet1",
            "aws_vpc.peering_vpc1",
            "aws_vpc.peering_vpc2",
            "aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:security-group/sg-0bb2b582bddbe34cc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb2b582bddbe34cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "server-sg",
            "name_prefix": "",
            "owner_id": "992382362896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Server-SG"
            },
            "tags_all": {
              "Name": "Server-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d90229bbaf5dfe74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.peering_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:security-group/sg-0abb942e8ac5400b8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abb942e8ac5400b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "server-sg2",
            "name_prefix": "",
            "owner_id": "992382362896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Server-SG2"
            },
            "tags_all": {
              "Name": "Server-SG2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4a88759f36c8914"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.peering_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:subnet/subnet-0556882cbab6feda5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0556882cbab6feda5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382362896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0d4a88759f36c8914"
          },
          "dependencies": [
            "aws_vpc.peering_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:subnet/subnet-0963cd20afbf1413a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0963cd20afbf1413a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382362896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0d90229bbaf5dfe74"
          },
          "dependencies": [
            "aws_vpc.peering_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "peering_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:vpc/vpc-0d90229bbaf5dfe74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03100bc82b110a7f6",
            "default_route_table_id": "rtb-030f7c37dc17342c6",
            "default_security_group_id": "sg-099b1050a3244e690",
            "dhcp_options_id": "dopt-0706bb4e3898a9f7b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d90229bbaf5dfe74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030f7c37dc17342c6",
            "owner_id": "992382362896",
            "tags": {
              "Name": "peering_vpc_1"
            },
            "tags_all": {
              "Name": "peering_vpc_1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "peering_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:vpc/vpc-0d4a88759f36c8914",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0397572aef2759bec",
            "default_route_table_id": "rtb-02136270b07f0050a",
            "default_security_group_id": "sg-069c52dde99f38c25",
            "dhcp_options_id": "dopt-0706bb4e3898a9f7b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d4a88759f36c8914",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02136270b07f0050a",
            "owner_id": "992382362896",
            "tags": {
              "Name": "peering_vpc_2"
            },
            "tags_all": {
              "Name": "peering_vpc_2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-045ec02d99745a5a3",
            "peer_owner_id": "992382362896",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-0d90229bbaf5dfe74",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "vpc-peering"
            },
            "tags_all": {
              "Name": "vpc-peering"
            },
            "vpc_id": "vpc-0d4a88759f36c8914"
          },
          "dependencies": [
            "aws_vpc.peering_vpc1",
            "aws_vpc.peering_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_all_allow1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:security-group-rule/sgr-0365bd13d689d4625",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0365bd13d689d4625",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb2b582bddbe34cc",
            "security_group_rule_id": "sgr-0365bd13d689d4625",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server-sg1",
            "aws_vpc.peering_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_all_allow2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:security-group-rule/sgr-09134aeb4d2800fc4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09134aeb4d2800fc4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0abb942e8ac5400b8",
            "security_group_rule_id": "sgr-09134aeb4d2800fc4",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server-sg2",
            "aws_vpc.peering_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_ssh_allow1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:security-group-rule/sgr-010bd3a26a95b6e34",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-010bd3a26a95b6e34",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb2b582bddbe34cc",
            "security_group_rule_id": "sgr-010bd3a26a95b6e34",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server-sg1",
            "aws_vpc.peering_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_ssh_allow2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:992382362896:security-group-rule/sgr-0e0d5a8c427e154e9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e0d5a8c427e154e9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0abb942e8ac5400b8",
            "security_group_rule_id": "sgr-0e0d5a8c427e154e9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server-sg2",
            "aws_vpc.peering_vpc2"
          ]
        }
      ]
    }
  ]
}